--- a/src/scss/components/Card.view.scss
+++ b/src/scss/components/Card.view.scss
@@ -32,6 +32,7 @@
         min-height: 1px;
         padding: 1.25rem;
         img {
+            object-fit: cover;
             height: 100px;
             width: 100px;
         }
