--- a/src/scss/containers/CatInformation.view.scss
+++ b/src/scss/containers/CatInformation.view.scss
@@ -27,18 +27,13 @@
         height: 100%;
         width: 50%;
         .img-container {
-            box-shadow: 4px 1px 10px #e2e2e2, -1px -2px 10px #e2e2e2;
             margin-top: 125px;
             margin-bottom: 125px;
-            width: 200px;
-            height: 200px;
-            position: relative;
-            overflow: hidden;
-            border-radius: 50%;
             img {
-                display: inline;
-                margin: 0 auto;
-                width: auto;
+                box-shadow: 4px 1px 10px #e2e2e2, -1px -2px 10px #e2e2e2;
+                object-fit: cover;
+                height: 200px;
+                width: 200px;
             }
         }
     }
