--- a/src/scss/constants/color.scss
+++ b/src/scss/constants/color.scss
@@ -7,3 +7,7 @@ $white: #ffffff;
 $white-grey: #F6F7FA;
 $blue-grey: #ebf1f8;
 $grey: #656686;
+
+$female: #f180ec;
+$male: #74d3f0;
+$neutral: #9affd8;
