--- a/src/scss/containers/CatInformation.view.scss
+++ b/src/scss/containers/CatInformation.view.scss
@@ -1,6 +1,29 @@
 @import "../constants/font.scss";
 @import "../constants/color.scss";
 
+.female-back {
+    background-color: $female;
+    border: 1px solid $female;
+}
+.male-back {
+    background-color: $male;
+    border: 1px solid $male;
+}
+.neutral-back {
+    background-color: $neutral;
+    border: 1px solid $neutral;
+}
+
+.female-front {
+    color: $female;
+}
+.male-front {
+    color: $male;
+}
+.neutral-front {
+    color: $neutral;
+}
+
 .back-button {
     cursor: pointer;
     margin: 50px 0 0 50px;
@@ -50,7 +73,6 @@
             height: 100%;
             padding: 20px;
             h2 {
-                color: #1effc7;
                 font-family: nunito-black;
             }
             h3 {
@@ -63,15 +85,13 @@
                 cursor: pointer;
                 display: inline-block;
                 font-weight: 400;
-                color: #212529;
-                background-color: #1effc7;
+                color: $white;
                 text-align: center;
                 vertical-align: middle;
                 -webkit-user-select: none;
                 -moz-user-select: none;
                 -ms-user-select: none;
                 user-select: none;
-                border: 1px solid #1effc7;
                 box-shadow: 1px 2px 10px #eee, -1px -2px 10px #eee;
                 padding: .375rem .75rem;
                 line-height: 1.5;
