--- a/src/scss/containers/CatInformation.view.scss
+++ b/src/scss/containers/CatInformation.view.scss
@@ -1,6 +1,51 @@
 @import "../constants/font.scss";
 @import "../constants/color.scss";
 
+.modal-dialog {
+    margin-top: 15%;
+    @media (max-width: 991px) {
+        margin-top: 25%;
+    }
+}
+.modal-content {
+    text-align: center;
+    .modal-header {
+        border-bottom: none !important;
+        padding-bottom: 0px;
+    }
+    .modal-title {
+        color: $dark-blue;
+        font-family: nunito-black;
+        font-size: 30px;
+        font-weight: 900;
+        letter-spacing: 0;
+        line-height: 72px;
+        width: -webkit-fill-available;
+    }
+    .modal-body {
+        padding-top: 0px;
+        color: $grey;
+        font-family: nunito;
+        font-size: 16px;
+        font-weight: 300;
+        letter-spacing: 0;
+        line-height: 28px;
+    }
+    .btn-secondary {
+        width: 140px;
+        border-radius: 41.5px;
+        color: $white;
+        font-family: Nunito;
+        font-size: 14px;
+        font-weight: 900;
+        letter-spacing: 0;
+        line-height: 19px;
+        text-align: center;
+        background: linear-gradient(180deg, $white-blue 0%, $blue 100%);
+        border-color: none;
+    }
+}
+
 .female-back {
     background-color: $female;
     border: 1px solid $female;
@@ -44,14 +89,31 @@
     box-shadow: 1px 2px 10px #e2e2e2, -1px -2px 10px #e2e2e2;
     height: 450px;
     transition: all .3s ease;
+    @media (max-width: 700px) {
+        height: 500px;
+    }
+    @media (max-width: 400px) {
+        height: 540px;
+    }
     .left-part {
         text-align: -webkit-center;        
         float: left;
         height: 100%;
         width: 50%;
+        @media (max-width: 700px) {
+            float: unset;
+            width: 100%;
+            height: unset;
+        }
         .img-container {
             margin-top: 125px;
             margin-bottom: 125px;
+            padding-top: 0;
+            @media (max-width: 700px) {
+                padding-top: 20px;
+                margin-top: 0;
+                margin-bottom: 0;
+            }
             img {
                 box-shadow: 4px 1px 10px #e2e2e2, -1px -2px 10px #e2e2e2;
                 object-fit: cover;
@@ -67,6 +129,11 @@
         position: absolute;
         height: 100%;
         width: 50%;
+        @media (max-width: 700px) {
+            float: unset;
+            width: 100%;
+            height: unset;
+        }
         .information-container {
             border: 3px dashed #000;
             display: grid;
@@ -97,6 +164,10 @@
                 line-height: 1.5;
                 border-radius: .25rem;
                 transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+                @media (max-width: 400px) {
+                    height: 45px;
+                    font-size: 10px;
+                }
             }
             .btn-custom:hover {
                 box-shadow: 0 1px 2px rgba(0,0,0,.37);
