--- a/src/scss/containers/CatInformation.view.scss
+++ b/src/scss/containers/CatInformation.view.scss
@@ -71,7 +71,7 @@
 
 .back-button {
     cursor: pointer;
-    margin: 50px 0 0 50px;
+    margin: 0 0 0 50px;
     font-family: nunito;
     color: $dark-blue !important;
     display: inline-block;
